fdo#42750: delay painting borders until after subsidiary lines

With commit 0f0896c26fb260d1bbf31d7a886df3f61837f0f2, borders are drawn
immediately, but then the subsidiary lines are drawn over the borders,
hiding 1 twip wide borders completely.